fix button alignment
`a.btn` and `button.btn` when next to each other will misalign slightly without this fix. Might be something in the base Bootstrap styles I'm missing

--- a/web-app/css/scaffolding.css
+++ b/web-app/css/scaffolding.css
@@ -8,6 +8,10 @@ body {
 	}
 }
 
+.btn {
+	vertical-align: middle;
+}
+
 /* index page */
 
 img#github-ribbon {
